--- a/03-常用的JavaScript库/06_官网/css/navbar.less
+++ b/03-常用的JavaScript库/06_官网/css/navbar.less
@@ -11,7 +11,17 @@
       }
     }
 
-    // 导航项
+    // 按钮
+    .navbar-toggler {
+      border: 0;
+      padding: 0;
+
+      .expand-icon {
+        height: 20px;
+      }
+    }
+
+    // 导航列表
     .navbar-nav {
       margin-right: auto;
 
@@ -32,6 +42,7 @@
     }
 
     .hot-line {
+      padding: 8px 25px;
       font-size: var(--font-size);
     }
 
