--- a/03-常用的JavaScript库/06_官网/css/navbar.css
+++ b/03-常用的JavaScript库/06_官网/css/navbar.css
@@ -1,3 +1,17 @@
+@media (max-width: 992px) {
+  .navbar-collapse {
+    color: var(--bg-color);
+    background-color: var(--bg-nav-color);
+  }
+  .navbar-collapse a {
+    color: var(--bg-color) !important;
+  }
+  .navbar-collapse a:hover {
+    text-decoration: none;
+    border-bottom: 2px solid var(--theme-color);
+    color: var(--theme-color);
+  }
+}
 .navbar {
   margin: 16px 0;
 }
@@ -29,6 +43,13 @@
   text-decoration: none;
   border-bottom: 2px solid var(--theme-color);
   color: var(--theme-color);
+}
+.navbar .container-fluid .navbar-nav .active a {
+  color: var(--theme-color);
+  border-bottom: 2px solid var(--theme-color);
+}
+.navbar .container-fluid .navbar-nav .active a:hover {
+  text-decoration: none;
 }
 .navbar .container-fluid .hot-line {
   padding: 8px 25px;
