--- a/03-常用的JavaScript库/06_官网/css/navbar.less
+++ b/03-常用的JavaScript库/06_官网/css/navbar.less
@@ -1,3 +1,20 @@
+@media (max-width: 992px) {
+  .navbar-collapse {
+    color: var(--bg-color);
+    background-color: var(--bg-nav-color);
+
+    a {
+      color: var(--bg-color) !important;
+
+      &:hover {
+        text-decoration: none;
+        border-bottom: 2px solid var(--theme-color);
+        color: var(--theme-color);
+      }
+    }
+  }
+}
+
 .navbar {
   margin: 16px 0;
 
@@ -36,6 +53,17 @@
             text-decoration: none;
             border-bottom: 2px solid var(--theme-color);
             color: var(--theme-color);
+          }
+        }
+      }
+
+      .active {
+        a {
+          color: var(--theme-color);
+          border-bottom: 2px solid var(--theme-color);
+
+          &:hover {
+            text-decoration: none;
           }
         }
       }
