--- a/03-常用的JavaScript库/06_官网/css/navbar.css
+++ b/03-常用的JavaScript库/06_官网/css/navbar.css
@@ -3,13 +3,20 @@
     color: var(--bg-color);
     background-color: var(--bg-nav-color);
   }
-  .navbar-collapse a {
+  .navbar-collapse .link-text a {
     color: var(--bg-color) !important;
   }
-  .navbar-collapse a:hover {
+  .navbar-collapse .link-text a:hover {
     text-decoration: none;
     border-bottom: 2px solid var(--theme-color);
     color: var(--theme-color);
+  }
+  .navbar-collapse .active a {
+    color: var(--theme-color) !important;
+    border-bottom: 2px solid var(--theme-color);
+  }
+  .navbar-collapse .active a:hover {
+    text-decoration: none;
   }
 }
 .navbar {
