--- a/03-常用的JavaScript库/06_官网/css/navbar.less
+++ b/03-常用的JavaScript库/06_官网/css/navbar.less
@@ -2,6 +2,7 @@
   .navbar-collapse {
     color: var(--bg-color);
     background-color: var(--bg-nav-color);
+    opacity: 0.9;
 
     .link-text {
       a {
@@ -25,7 +26,6 @@
         }
       }
     }
-
   }
 }
 
