--- a/03-常用的JavaScript库/06_官网/css/navbar.css
+++ b/03-常用的JavaScript库/06_官网/css/navbar.css
@@ -1,5 +1,6 @@
 @media (max-width: 992px) {
   .navbar-collapse {
+    margin: 0 -16px;
     color: var(--bg-color);
     background-color: var(--bg-nav-color);
     opacity: 0.9;
