--- a/03-常用的JavaScript库/06_官网/css/navbar.less
+++ b/03-常用的JavaScript库/06_官网/css/navbar.less
@@ -1,5 +1,8 @@
 @media (max-width: 992px) {
   .navbar-collapse {
+    position: absolute;
+    top: calc(100% + 16px);
+    width: 100%;
     margin: 0 -16px;
     color: var(--bg-color);
     background-color: var(--bg-nav-color);
