--- a/03-常用的JavaScript库/06_官网/css/navbar.css
+++ b/03-常用的JavaScript库/06_官网/css/navbar.css
@@ -7,6 +7,7 @@
     color: var(--bg-color);
     background-color: var(--bg-nav-color);
     opacity: 0.9;
+    z-index: 100;
   }
   .navbar-collapse .link-text a {
     color: var(--bg-color) !important;
