--- a/03-常用的JavaScript库/06_官网/css/navbar.less
+++ b/03-常用的JavaScript库/06_官网/css/navbar.less
@@ -7,6 +7,7 @@
     color: var(--bg-color);
     background-color: var(--bg-nav-color);
     opacity: 0.9;
+    z-index: 100;
 
     .link-text {
       a {
