: 前端工程化基础

--- a/04-前端工程化基础/06_webpack/src/css/div_style.css
+++ b/04-前端工程化基础/06_webpack/src/css/div_style.css
@@ -1,6 +1,6 @@
 .content {
     font-size: 20px;
-    background-color: pink;
+    background-color: #66666666;
     color: red;
 
     user-select: none;
