--- a/04-前端工程化基础/06_webpack/src/css/div_style.css
+++ b/04-前端工程化基础/06_webpack/src/css/div_style.css
@@ -5,3 +5,9 @@
 
     user-select: none;
 }
+
+.img-bg {
+    width: 500px;
+    height: 500px;
+    background: url('../assets/nhlt.jpg') no-repeat;
+}
