--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/src/assets/css/common.css
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/src/assets/css/common.css
@@ -2,6 +2,12 @@
     --primary-color: #ff9854;
 }
 
+:root:root {
+    --van-search-label-color: #ff9854;
+    --van-search-left-icon-color: #ff9854;
+    --van-tabbar-item-active-color: #ff9854;
+}
+
 body {
     font-size: 14px;
 }
