--- a/05-Vue3全家桶/06_Vue项目/vue-traveling/src/assets/css/common.css
+++ b/05-Vue3全家桶/06_Vue项目/vue-traveling/src/assets/css/common.css
@@ -9,7 +9,7 @@
     --van-tabbar-item-active-color: var(--primary-color);
     --van-tabs-bottom-bar-color: var(--primary-color);
     --van-index-anchor-text-color: var(--primary-color);
-    --van-grid-item-content-background: pink;
+    /*--van-grid-item-content-background: pink;*/
 }
 
 body {
