--- a/07-React18全家桶/03_组件化开发/11_react-app-hoc/src/App.css
+++ b/07-React18全家桶/03_组件化开发/11_react-app-hoc/src/App.css
@@ -1,15 +1,39 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+body {
+    margin: 0;
+    padding: 0;
 }
 
-.content {
-    background-color: pink;
-    padding: 10px;
-    width: 500px;
-    height: 500px;
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 200px;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
 }
+
+.modal-open::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 9998;
+}
+
+
+
+
+
+
+
+
 
 
