--- a/07-React18全家桶/04_React的过渡动画/01_react-app-css/src/App.css
+++ b/07-React18全家桶/04_React的过渡动画/01_react-app-css/src/App.css
@@ -1,3 +1,10 @@
+.h2-appear {
+    transform: translateX(-150px);
+}
+.h2-appear-active {
+    transform: translateX(0);
+    transition: transform 2000ms ease;
+}
 .h2-enter {
     opacity: 0;
 }
@@ -5,7 +12,6 @@
     opacity: 1;
     transition: opacity 2000ms ease;
 }
-
 .h2-exit {
     opacity: 1;
 }
