--- a/07-React18全家桶/04_React的过渡动画/02_react-app-css/src/App.css
+++ b/07-React18全家桶/04_React的过渡动画/02_react-app-css/src/App.css
@@ -4,7 +4,7 @@
 }
 .fade-enter-active  {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
 }
 .fade-exit  {
     opacity: 1;
